Fixes #530 by detecting intermediate grandparent deletions

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -2081,7 +2081,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       } else if (meta.IsRollupStartedFromParent__c) {
         queryWrapper = getParentQueryWrapper(calcItems, oldCalcItems, meta);
       } else if (isIntermediateRollupForGrandparent) {
-        queryWrapper = getIntermediateGrandparentQueryWrapper(meta, calcItems, oldCalcItems);
+        queryWrapper = getIntermediateGrandparentQueryWrapper(meta, calcItems, oldCalcItems, rollupContext);
       }
 
       if (queryWrapper?.hasQuery == true) {
@@ -2502,8 +2502,14 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     throw ex;
   }
 
-  private static QueryWrapper getIntermediateGrandparentQueryWrapper(Rollup__mdt meta, List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
-    if (isCDC || oldCalcItems?.isEmpty() != false) {
+  private static QueryWrapper getIntermediateGrandparentQueryWrapper(
+    Rollup__mdt meta,
+    List<SObject> calcItems,
+    Map<Id, SObject> oldCalcItems,
+    String rollupContext
+  ) {
+    Boolean isDelete = rollupContext.startsWithIgnoreCase('delete');
+    if (isCDC || oldCalcItems?.isEmpty() != false && isDelete == false) {
       return new QueryWrapper();
     }
 
@@ -2523,13 +2529,18 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     }
 
     QueryWrapper wrapper = new QueryWrapper('', priorFieldPath);
+    SObject possibleOldItem = sObjectType.newSObject();
     for (SObject calcItem : calcItems) {
-      SObject oldCalcItem = oldCalcItems.get(calcItem.Id);
+      SObject oldCalcItem = isDelete ? possibleOldItem : oldCalcItems.get(calcItem.Id);
       if (oldCalcItem != null) {
         String currentLookup = (String) calcItem.get(fieldToken);
         String oldLookup = (String) oldCalcItem.get(fieldToken);
         if (currentLookup != oldLookup) {
           wrapper.addRecordId(currentLookup);
+          if (isDelete) {
+            oldLookup = currentLookup;
+            currentLookup = null;
+          }
           if (oldLookup != null) {
             wrapper.addRecordId(oldLookup);
             Set<Id> oldIntermediateParents = wrapper.typeToOldIntermediateParents.get(calcItem.getSObjectType());
