--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -240,7 +240,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   }
 
   private class RollupMetadata {
-    public final Map<Schema.SObjectType, Set<String>> typeToOldIntermediateParents = new Map<Schema.SObjectType, Set<String>>();
+    public final Map<Schema.SObjectType, Set<Id>> typeToOldIntermediateParents = new Map<Schema.SObjectType, Set<Id>>();
     public final Set<String> recordIds = new Set<String>();
     public final Set<String> queryFields = new Set<String>();
     public final List<Rollup__mdt> metadata = new List<Rollup__mdt>();
@@ -2081,7 +2081,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       } else if (meta.IsRollupStartedFromParent__c) {
         queryWrapper = getParentQueryWrapper(calcItems, oldCalcItems, meta);
       } else if (isIntermediateRollupForGrandparent) {
-        queryWrapper = getIntermediateGrandparentQueryWrapper(meta, calcItems, oldCalcItems);
+        queryWrapper = getIntermediateGrandparentQueryWrapper(meta, calcItems, oldCalcItems, rollupContext);
       }
 
       if (queryWrapper?.hasQuery == true) {
@@ -2376,6 +2376,10 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       fullRecalc.storeParentFieldsToClear(wrappedMeta.parentRecordsToReset);
       fullRecalc.isNoOp = false;
     }
+    if (wrappedMeta.typeToOldIntermediateParents.isEmpty() == false) {
+      fullRecalc.setOldIntermediateGrandparents(wrappedMeta.typeToOldIntermediateParents);
+      fullRecalc.isNoOp = false;
+    }
     return fullRecalc;
   }
 
@@ -2498,8 +2502,14 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     throw ex;
   }
 
-  private static QueryWrapper getIntermediateGrandparentQueryWrapper(Rollup__mdt meta, List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
-    if (isCDC || oldCalcItems?.isEmpty() != false) {
+  private static QueryWrapper getIntermediateGrandparentQueryWrapper(
+    Rollup__mdt meta,
+    List<SObject> calcItems,
+    Map<Id, SObject> oldCalcItems,
+    String rollupContext
+  ) {
+    Boolean isDelete = rollupContext.startsWithIgnoreCase('delete');
+    if (isCDC || oldCalcItems?.isEmpty() != false && isDelete == false) {
       return new QueryWrapper();
     }
 
@@ -2519,21 +2529,26 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     }
 
     QueryWrapper wrapper = new QueryWrapper('', priorFieldPath);
+    SObject possibleOldItem = sObjectType.newSObject();
     for (SObject calcItem : calcItems) {
-      SObject oldCalcItem = oldCalcItems.get(calcItem.Id);
+      SObject oldCalcItem = isDelete ? possibleOldItem : oldCalcItems.get(calcItem.Id);
       if (oldCalcItem != null) {
         String currentLookup = (String) calcItem.get(fieldToken);
         String oldLookup = (String) oldCalcItem.get(fieldToken);
         if (currentLookup != oldLookup) {
           wrapper.addRecordId(currentLookup);
+          if (isDelete) {
+            oldLookup = currentLookup;
+            currentLookup = null;
+          }
           if (oldLookup != null) {
             wrapper.addRecordId(oldLookup);
-            Set<String> oldIntermediateParents = wrapper.typeToOldIntermediateParents.get(calcItem.getSObjectType());
+            Set<Id> oldIntermediateParents = wrapper.typeToOldIntermediateParents.get(calcItem.getSObjectType());
             if (oldIntermediateParents == null) {
-              oldIntermediateParents = new Set<String>();
+              oldIntermediateParents = new Set<Id>();
               wrapper.typeToOldIntermediateParents.put(calcItem.getSObjectType(), oldIntermediateParents);
             }
-            oldIntermediateParents.add(oldLookup);
+            oldIntermediateParents.add((Id) oldLookup);
           }
         }
       }
@@ -2546,7 +2561,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     private String query;
     private final List<SObject> parentRecordsToReset = new List<SObject>();
     private final Set<String> recordIds = new Set<String>();
-    private final Map<Schema.SObjectType, Set<String>> typeToOldIntermediateParents = new Map<Schema.SObjectType, Set<String>>();
+    private final Map<Schema.SObjectType, Set<Id>> typeToOldIntermediateParents = new Map<Schema.SObjectType, Set<Id>>();
 
     private QueryWrapper() {
     }
