Fixes #523 by correctly grouping all grandparent records into ordered batches

--- a/extra-tests/classes/CustomMetadataDrivenTests.cls
+++ b/extra-tests/classes/CustomMetadataDrivenTests.cls
@@ -117,8 +117,7 @@ private class CustomMetadataDrivenTests {
     Rollup.defaultControl = new RollupControl__mdt(
       ShouldRunAs__c = RollupMetaPicklists.ShouldRunAs.Synchronous,
       IsRollupLoggingEnabled__c = true,
-      ReplaceCalcItemsAsyncWhenOverCount__c = 2,
-      BatchChunkSize__c = 10
+      ReplaceCalcItemsAsyncWhenOverCount__c = 2
     );
     ParentApplication__c parentApp = new ParentApplication__c(Name = 'Parent');
     insert parentApp;
